--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+#root {
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
