--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,24 @@
   }
 }
 
+body {
+  background-color: #282c34;
+}
+
 #root {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background-color: #282c34;
+  font-family: 'Share Tech Mono';
+}
+
+.card {
+  padding: 10px;
+  margin-top: 5%
+}
+
+.row {
+  justify-content: center;
 }
 
 .App-header {
