--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+#root {
+  color: white;
+}
+
 body {
   margin: 0;
   font-family: 'Share Tech Mono', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw
 }
 
 code {
   font-family: 'Share Tech Mono', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+select {
+  margin-left: 10px;
 }
