--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,48 @@ body {
   width: 100vw;
   background-color: #282c34;
   font-family: 'Share Tech Mono';
+  scroll-behavior: smooth;
+}
+
+#projectsRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+  height: .8em;
+  width: 1em
+}
+
+::-webkit-scrollbar-track {
+  background: #9e9e9ebe;
+  border-radius: 100vw;
+  margin-inline: 5em;
+  margin-block: 2em
+}
+
+::-webkit-scrollbar-thumb {
+  background: #525252d7;
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3b3b3b;
 }
 
 .card {
-  padding: 10px;
-  margin-top: 5%;
+  padding: 1vw;
+  height: 100%
+}
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden
 }
 
 .App-header {
