--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,14 @@
 }
 
 body {
-  background-color: #282c34;
+  background-color: white;
+}
+
+h1 {
+  font-size: '4rem';
+  margin: '3rem';
+  background-color: 'white';
+  border-radius: '5%'
 }
 
 #root {
