--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,12 @@ h1 {
   height: 100%
 }
 
+.card img {
+  max-height: 50%;
+  object-fit: contain;
+  background-color: black;
+}
+
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 4;
