--- a/src/App.css
+++ b/src/App.css
@@ -54,14 +54,25 @@ h1 {
 }
 
 .card {
+  background-color: #F7EFE6 !important;
+  color: #212529 !important;
   padding: 1vw;
-  height: 100%
+  height: 100%;
 }
 
 .card img {
   width: 100%;
   object-fit: contain;
   background-color: black;
+}
+
+.custom-card {
+  background-color: #ffffff !important;
+  color: #212529;
+  align-items: center;
+  position: absolute !important;
+  height: auto;
+  top: 2.4rem
 }
 
 .line-clamp {
