mobile component looks good, and z-index uses state

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@ h1 {
   overflow-y: scroll;
 }
 
+.carousel-control{
+      width: 10%;
+}
+
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 4;
