--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,11 @@ h1 {
   opacity: 1;
 }
 
+.form-control {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 4;
