--- a/src/App.css
+++ b/src/App.css
@@ -47,12 +47,18 @@ h1 {
 }
 
 .navbar {
-  background-color: rgba(89, 190, 230, 0.889);
-  border-radius: 1.3rem;
+  background-color: rgb(0, 115, 255);
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  box-shadow: .5rem .5rem #3b3b3be1;
 }
 
 .nav-link {
   font-size: 2rem;
+}
+
+.nav-item {
+  margin-right: 2rem
 }
 
 .card {
