--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,11 @@ h1 {
   color: #212529 !important;
   padding: 1vw;
   height: 100%;
+  border-radius: 1rem !important;
+}
+
+.card-header {
+  padding-bottom: 0 !important;
 }
 
 .card img {
